fix spacing

--- a/Frontend/data-submission-page/style.css
+++ b/Frontend/data-submission-page/style.css
@@ -198,7 +198,7 @@ h1{
 
 /* CONTACT INFO */
 .contact-title{
-  margin-top:0px;
+  margin-top:88px;
 }
 
 .contact-form{
